# BidiRenderer

./: .gitignore  BidiRenderer.pro  glyph_string.cpp  glyph_string.h  glyph_string_renderer.cpp  glyph_string_visualizer.cpp  mainwindow.cpp
testing/: CMakeLists.txt  test_glyph_string.cpp  testing_main.cpp
